2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* NodeIndex.cpp:
	* InlineEditor.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserDefinedFieldsEditor.cpp: 

2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* BrowserWindow.h:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* .dirstamp:
	* TextureEditor.xml:
	* MaterialEditor.xml:
	* AppearanceEditor.xml:
	* MaterialEditor.h:
	* .dirstamp:
	* MaterialEditor.cpp:
	* OutlineRouteGraph.h:
	* X3DLightEditorInterface.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DMaterialEditor.h:
	* AppearanceEditor.h:
	* OutlineRouteGraph.cpp:
	* X3DMaterialEditorInterface.h:
	* X3DMaterialEditor.cpp:
	* X3DMaterialEditor.h:
	* X3DBrowserWindowInterface.cpp:
	* AppearanceEditor.cpp:
	* X3DMaterialEditorInterface.cpp:
	* X3DAppearanceEditorInterface.h:
	* X3DMaterialEditor.cpp:
	* X3DAppearanceEditorInterface.cpp:
	* X3DFillPropertiesEditor.h:
	* X3DLinePropertiesEditor.h:
	* X3DFillPropertiesEditor.cpp:
	* X3DLinePropertiesEditor.cpp:
	* X3DUserDefinedFieldsEditor.cpp: 

2014-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* NameEntry.h:
	* NodePropertiesEditor.xml:
	* NodePropertiesEditor.h:
	* NodePropertiesEditor.cpp: 

2014-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* MFStringURLWidget.h:
	* NodePropertiesEditor.xml:
	* X3DExportedNodesEditor.cpp:
	* X3DUserDefinedFieldsEditor.cpp: 

2014-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* X3DEditorObject.h:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* NodeIndex.h:
	* LODEditor.xml:
	* NodeIndex.xml:
	* TextEditor.xml:
	* NodeIndex.cpp:
	* InlineEditor.xml:
	* TextureEditor.xml:
	* HistoryView.cpp:
	* MFStringURLWidget.h:
	* LibraryView.cpp:
	* InlineEditor.cpp:
	* ViewpointList.cpp:
	* X3DTextEditorInterface.h: